# GlaCIfier

./: .gitignore  README.md  pyproject.toml
src/: exceptions.py
src/glacifier/: models.py
src/glacifier/models/: __init__.py  job.py  pipeline.py  stage.py
src/graph/: builder.py
src/models/: __init__.py  job.py  pipeline.py  stage.py
tasks/: dev.py
tests/: test_models.py
tests/definitions/: test_job.py  test_pipeline.py  test_runtime.py  test_stage.py
