[tool.poetry]
name = "GlaCIfier"
version = "0.1.0"
description = "Drop the YAML, and control your Gitlab-CI with code. Who doesn't want that?"
authors = ["Valentin Famelart"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
factory-boy = "^3.2.1"
ggshield = "^1.16.0"
ruff = "^0.0.270"
black = "^23.3.0"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
